# hypermesh-weld-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: integration-probe-1.json
docs/: architecture.md  current-state.md  development.md  domain-model.md  index.md  roadmap.md  setup.md
docs/decisions/: 0001-terminal-first-independent-repository.md  0002-pythonocc-headless-geometry-kernel.md  0003-explicit-cad-markers-first.md  0004-user-approved-connectors.md  README.md
docs/integrations/: README.md  hypermesh-2017.md  hypermesh-occ-bridge.md  local-environment.md  pythonocc.md
docs/manual-tests/: README.md  hm2017-capability-probe.md  hm2017-step-export-probe.md  (+1 more)
docs/superpowers/: README.md
schemas/: export-manifest.schema.json  export-validation.schema.json  hypermesh-probe.schema.json  integration-profile.schema.json  marker-input-manifest.schema.json  selection.schema.json  weld-candidates.schema.json  weld-markers.schema.json
scripts/: identify_weld_markers.ps1  verify.ps1
tests/: test_contracts.py  test_documentation.py  test_export_cli.py  test_export_contracts.py  test_export_finalizer.py  test_fixture_provider.py  test_hypermesh_export_tcl.py  test_hypermesh_probe_contract.py  test_hypermesh_tcl_adapter.py  test_identify_weld_markers_script.py  test_marker_contracts.py  test_marker_identification.py  test_marker_identification_cli.py  test_marker_identification_workflow.py  test_occ_marker_reader.py  test_package.py  test_run_workspace.py  test_runtime.py  test_step_inspector.py  test_workflow_cli.py
(+30 files in other folders)
