[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypermesh-weld-agent"
version = "0.1.0"
description = "Human-reviewed spot-weld candidate workflow for HyperMesh 2017"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "jsonschema>=4.23,<5",
  "referencing>=0.35,<0.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
]

[project.scripts]
hypermesh-weld-agent = "weld_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -p no:cacheprovider"
